--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -65,8 +65,9 @@ COPY . /data/olympia
 WORKDIR /data/olympia
 
 # Install all python requires
-RUN pip3 install --no-cache-dir --exists-action=w --no-deps -r requirements/system.txt                      \
+RUN pip3 install --no-cache-dir --exists-action=w --no-deps -r requirements/system.txt   \
     && pip3 install --no-cache-dir --exists-action=w --no-deps -r requirements/prod.txt  \
+    && pip3 install --no-cache-dir --exists-action=w --no-deps -r requirements/prod_without_hash.txt \
     && pip3 install --no-cache-dir --exists-action=w --no-deps -e .
 
 # Link /usr/bin/uwsgi to /usr/local/bin/uwsgi, as that was the
