--- a/.travis.yml
+++ b/.travis.yml
@@ -69,17 +69,17 @@ before_script:
 
 script:
   - |
-    if [[ $TRAVIS_EVENT_TYPE != "cron" ]]; then
-      if [[ $TOXENV == "amo-lib-locales-and-signing" ]]; then
+    if [ $TRAVIS_EVENT_TYPE != "cron" ]; then
+      if [ $TOXENV == "amo-lib-locales-and-signing" ] || [ $TOXENV == "reviewers-and-zadmin" ] ; then
          docker run --name autograph -d -p 5500:5500 -v $(pwd)/scripts/:/scripts/ mozilla/autograph:3.3.2 /go/bin/autograph -c /scripts/autograph_travis_test_config.yaml
       fi
       RUNNING_IN_CI=True tox
     fi
   - |
-    if [[ $TRAVIS_EVENT_TYPE == "cron" ]]; then
+    if [ $TRAVIS_EVENT_TYPE == "cron" ]; then
       # Only run the extraction on "main" environment to avoid creating
       # 8 pull requests for each tox environment.
-      if [[ $TOXENV == "main" ]]; then
+      if [ $TOXENV == "main" ]; then
           bash scripts/travis-extract-l10n.sh
       fi
     fi
