--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-dist: bionic
+dist: xenial
 
 python:
   - 3.6
@@ -52,6 +52,10 @@ before_install:
   - mysql -e 'create database olympia;'
   - export GOPATH=$HOME/go
   - export PATH=$HOME/usr/local/go/bin:$GOPATH/bin:$PATH
+  # Unfortunately we require the most recent libmagic-dev version to make use of more recent
+  # JSON detection features which we require for the code-manager related APIs
+  - wget http://security.ubuntu.com/ubuntu/pool/main/f/file/libmagic-dev_5.35-4_i386.deb
+  - sudo dpkg -i libmagic-dev_5.35-4_i386.deb
 
 install:
   - nvm current
