--- a/.travis.yml
+++ b/.travis.yml
@@ -54,10 +54,9 @@ before_install:
   - export PATH=$HOME/usr/local/go/bin:$GOPATH/bin:$PATH
   # Unfortunately we require the most recent libmagic-dev version to make use of more recent
   # JSON detection features which we require for the code-manager related APIs
-  - wget http://security.ubuntu.com/ubuntu/pool/main/f/file/libmagic-dev_5.35-4_amd64.deb
-  - wget http://security.ubuntu.com/ubuntu/pool/main/f/file/libmagic1_5.35-4_amd64.deb
-  - wget http://security.ubuntu.com/ubuntu/pool/main/f/file/libmagic-mgc_5.35-4_amd64.deb
-  - sudo dpkg -i libmagic-dev_5.35-4_amd64.deb libmagic1_5.35-4_amd64.deb libmagic-mgc_5.35-4_amd64.deb
+  - echo "deb http://archive.ubuntu.com/ubuntu disco main" | sudo tee -a /etc/apt/sources.list
+  - sudo apt-get update -qq
+  - sudo apt-get install libmagic-dev libmagic1 libmagic-mgc
 
 install:
   - nvm current
