--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ before_install:
   # JSON detection features which we require for the code-manager related APIs
   - echo "deb http://archive.ubuntu.com/ubuntu disco main" | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
-  - sudo apt-get install libmagic-dev libmagic1 libmagic-mgc
+  - sudo apt-get install -t disco libmagic-dev libmagic1 libmagic-mgc
 
 install:
   - nvm current
