--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -16,9 +16,9 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 RUN cat /etc/pki/gpg/GPG-KEY-nodesource | apt-key add -
 ADD docker/debian-stretch-nodesource-repo /etc/apt/sources.list.d/nodesource.list
-ADD docker/debian-stretch-backports-repo /etc/apt/sources.list.d/backports.list
+ADD docker/debian-buster-testing-repo /etc/apt/sources.list.d/testing.list
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get -t stretch install -y \
         # General (dev-) dependencies
         bash-completion                  \
         build-essential                  \
@@ -50,6 +50,13 @@ RUN apt-get update && apt-get install -y \
         # Use libmaxmind for speedy geoip lookups
         libmaxminddb0                    \
         libmaxminddb-dev                 \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get -t buster install -y \
+       # For an up-to-date `file` and `libmagic-dev` library for better file
+       # detection.
+       file \
+       libmagic-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Compile required locale
