Move ResourceWarning filtering to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ DJANGO_SETTINGS_MODULE = settings_test
 filterwarnings =
     default
     ignore:::csp.utils
+    # Ignore ResourceWarning for now. It's a Python 3 thing :-/
+    ignore::ResourceWarning
 
 [flake8]
 ignore = F999,F405,W504
