Configure and use uwsgi instead of runserver.

--- a/docker/supervisor.conf
+++ b/docker/supervisor.conf
@@ -2,7 +2,7 @@
 logfile=/code/logs/supervisord.log
 
 [program:olympia]
-command=python /code/manage.py runserver 0.0.0.0:8000
+command=uwsgi --ini /code/docker/uwsgi.ini
 directory=/code
 stopasgroup=true
 autostart=true
