Link to olympia.wsgi:application

--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -2,7 +2,7 @@
 [uwsgi]
 base            = /code
 chdir           = %(base)
-module          = olympia.wsgi
+module          = olympia.wsgi:application
 
 # process-related settings
 master          = true
