--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     command: supervisord -n -c /code/docker/supervisor.conf
 
   nginx:
-    image: addons/addons-nginx:uwsgi
+    image: addons/addons-nginx
     volumes:
       - ./static:/srv/static
       - ./site-static:/srv/site-static
