--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -9,14 +9,14 @@ master          = true
 # maximum number of worker processes
 processes       = 4
 socket          = :8001
-vacuum          = true
 uid             = olympia
 gid             = olympia
+enable-threads  = true
+memory-report   = true
 
-# This only points to the src/ directory which should cover
-# 99% of autoreload scenarios. Coverting the whole %(base) will issue
-# autoreloads on new uploads etc as they're in %(base)/storage/
-fs-reload       = %(base)/src/
+# This will autoreload based on python module modifications.
+# The scanning will happen every 3 seconds.
+py-autoreload = 3
 
 safe-pidfile = %(base)/docker/artifacts/addons-server-uwsgi-master.pid
 max-requests = 5000
