--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -8,6 +8,7 @@ module          = olympia.wsgi:application
 master          = true
 # maximum number of worker processes
 processes       = 4
+vaccum          = true
 socket          = :8001
 uid             = olympia
 gid             = olympia
