--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -12,14 +12,14 @@ vaccum          = true
 socket          = :8001
 uid             = olympia
 gid             = olympia
-enable-threads  = true
 memory-report   = true
+enable-threads  = true
 
-# This will autoreload based on python module modifications.
-# The scanning will happen every 3 seconds.
-py-autoreload = 3
-
+# Run watchmedo (via watchdog) to implement unrestricted
+# autoreload capability.
+fs-reload = %(base)/docker/artifacts/
 safe-pidfile = %(base)/docker/artifacts/addons-server-uwsgi-master.pid
+attach-daemon = setsid watchmedo shell-command --patterns="*.py" --recursive --command='/usr/bin/touch %(safe-pidfile)' %(base)
 max-requests = 5000
 
 # Load apps in workers and not only in master
