Fix uwsgi autoreload. (#11992)
* Fix uwsgi autoreload.

This will scan python modules for modifications every 3 seconds. It most
certainly will still be more efficient than Django's autoreload.

Fixes #11990

* re-add vaccum

* Use watchmedo to reload properly

--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -8,17 +8,18 @@ module          = olympia.wsgi:application
 master          = true
 # maximum number of worker processes
 processes       = 4
+vaccum          = true
 socket          = :8001
-vacuum          = true
 uid             = olympia
 gid             = olympia
+memory-report   = true
+enable-threads  = true
 
-# This only points to the src/ directory which should cover
-# 99% of autoreload scenarios. Coverting the whole %(base) will issue
-# autoreloads on new uploads etc as they're in %(base)/storage/
-fs-reload       = %(base)/src/
-
+# Run watchmedo (via watchdog) to implement unrestricted
+# autoreload capability.
+fs-reload = %(base)/docker/artifacts/
 safe-pidfile = %(base)/docker/artifacts/addons-server-uwsgi-master.pid
+attach-daemon = setsid watchmedo shell-command --patterns="*.py" --recursive --command='/usr/bin/touch %(safe-pidfile)' %(base)
 max-requests = 5000
 
 # Load apps in workers and not only in master
