--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,8 +119,10 @@ jobs:
             # Make sure dependencies get updated in worker and web container
             docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml exec worker make -f Makefile-docker update_deps update_assets
             docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml restart worker
+            docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml up -d
             docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml exec web make -f Makefile-docker update_deps update_assets
             docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml restart web
+            docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml up -d
             # mod user in firefox container
             docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml exec selenium-firefox sudo usermod -u 1001 seluser
             # proper chown
@@ -133,6 +135,7 @@ jobs:
             docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml exec selenium-firefox sudo chown -R seluser:seluser .
             # Start auto approve script
             docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml exec -T web make -f Makefile-docker run-auto-approve &
+            docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml ps
             # Start Test in Firefox docker container
             docker-compose -f docker-compose.yml -f tests/ui/docker-compose.selenium.yml exec selenium-firefox tox -r -e ui-tests
       - store_artifacts:
