Try disabling autoreload via env variable.

--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -17,10 +17,13 @@ enable-threads  = true
 
 # Run watchmedo (via watchdog) to implement unrestricted
 # autoreload capability.
-# fs-reload = %(base)/docker/artifacts/
-# safe-pidfile = %(base)/docker/artifacts/addons-server-uwsgi-master.pid
-# attach-daemon = setsid watchmedo shell-command --patterns="*.py" --recursive --command='/usr/bin/touch %(safe-pidfile)' %(base)
-# max-requests = 5000
+fs-reload = %(base)/docker/artifacts/
+# CI is only being set on circleci. See addons-server issue #12064
+if-not-env = CI
+safe-pidfile = %(base)/docker/artifacts/addons-server-uwsgi-master.pid
+attach-daemon = setsid watchmedo shell-command --patterns="*.py" --recursive --command='/usr/bin/touch %(safe-pidfile)' %(base)
+endif =
+max-requests = 5000
 
 # Load apps in workers and not only in master
 lazy-apps = true
