--- a/tox.ini
+++ b/tox.ini
@@ -28,42 +28,42 @@ whitelist_externals =
     bash
     pytest
 
-[testenv:es]
+[testenv:es-and-celery]
 commands =
     make install_python_test_dependencies
-    pytest -m "es_tests and not needs_locales_compilation and not static_assets" --ignore=tests/ui/ -v src/olympia/{posargs}
+    pytest -m "es_tests and celery_worker_test and not needs_locales_compilation and not static_assets" --ignore=tests/ui/ -v src/olympia/{posargs}
 
 [testenv:addons-versions-and-files]
 commands =
     make install_python_test_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/addons/ src/olympia/versions/ src/olympia/files/ {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/addons/ src/olympia/versions/ src/olympia/files/ {posargs}
 
 [testenv:devhub]
 commands =
     make install_python_test_dependencies install_node_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/devhub/ {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/devhub/ {posargs}
 
 [testenv:reviewers-and-zadmin]
 commands =
     make install_python_test_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/reviewers/ src/olympia/zadmin/ {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/reviewers/ src/olympia/zadmin/ {posargs}
 
 [testenv:amo-lib-locales-and-signing]
 commands =
     make install_python_test_dependencies install_node_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/amo/ src/olympia/lib/ src/olympia/signing {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/amo/ src/olympia/lib/ src/olympia/signing {posargs}
     bash {toxinidir}/locale/compile-mo.sh {toxinidir}/locale/
     pytest -n 2 -m 'needs_locales_compilation' -v src/olympia/ {posargs}
 
 [testenv:accounts-users-and-ratings]
 commands =
     make install_python_test_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/accounts/ src/olympia/users/ src/olympia/ratings/ {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/accounts/ src/olympia/users/ src/olympia/ratings/ {posargs}
 
 [testenv:main]
 commands =
     make install_python_test_dependencies install_node_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/ \
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/ \
         --ignore src/olympia/addons/ \
         --ignore src/olympia/devhub/ \
         --ignore src/olympia/files/ \
