combine accounts-users-and-ratings job into other jobs

--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,9 @@ envlist =
     docs,
     assets,
     codestyle
-    addons-versions-and-files,
+    addons-versions-files-ratings,
     amo-lib-locales-and-signin,
-    reviewers-and-zadmin,
-    accounts-users-and-ratings,
+    reviewers-and-zadmin
 
 [testenv]
 passenv = *
@@ -33,10 +32,10 @@ commands =
     make install_python_test_dependencies
     pytest -m "es_tests and not needs_locales_compilation and not static_assets" --ignore=tests/ui/ -v src/olympia/{posargs}
 
-[testenv:addons-versions-and-files]
+[testenv:addons-versions-files-ratings]
 commands =
     make install_python_test_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/addons/ src/olympia/versions/ src/olympia/files/ {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/addons/ src/olympia/versions/ src/olympia/files/  src/olympia/ratings/ {posargs}
 
 [testenv:devhub]
 commands =
@@ -55,11 +54,6 @@ commands =
     bash {toxinidir}/locale/compile-mo.sh {toxinidir}/locale/
     pytest -n 2 -m 'needs_locales_compilation' -v src/olympia/ {posargs}
 
-[testenv:accounts-users-and-ratings]
-commands =
-    make install_python_test_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets' -v src/olympia/accounts/ src/olympia/users/ src/olympia/ratings/ {posargs}
-
 [testenv:main]
 commands =
     make install_python_test_dependencies install_node_dependencies
@@ -70,8 +64,7 @@ commands =
         --ignore src/olympia/reviewers/ \
         --ignore src/olympia/ratings/ \
         --ignore src/olympia/amo/ \
-        --ignore src/olympia/users/ \
-        --ignore src/olympia/accounts/ \
+
         --ignore src/olympia/lib/ \
         --ignore src/olympia/signing \
         --ignore src/olympia/versions/ \
