probably unimportant tox file minor changes.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist =
     ui-tests,
     docs,
     assets,
-    codestyle
+    codestyle,
     addons-versions-files-ratings,
     amo-lib-locales-and-signin,
     reviewers-and-zadmin
@@ -64,7 +64,6 @@ commands =
         --ignore src/olympia/reviewers/ \
         --ignore src/olympia/ratings/ \
         --ignore src/olympia/amo/ \
-
         --ignore src/olympia/lib/ \
         --ignore src/olympia/signing \
         --ignore src/olympia/versions/ \
