Fix es-and-celery marker selection

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ whitelist_externals =
 [testenv:es-and-celery]
 commands =
     make install_python_test_dependencies
-    pytest -m "es_tests and celery_worker_test and not needs_locales_compilation and not static_assets" --ignore=tests/ui/ -v src/olympia/{posargs}
+    pytest -m "es_tests or celery_worker_test and not needs_locales_compilation and not static_assets" --ignore=tests/ui/ -v src/olympia/ {posargs}
 
 [testenv:addons-versions-files-ratings]
 commands =
