--- a/Makefile-os
+++ b/Makefile-os
@@ -66,7 +66,7 @@ shell:
 
 .PHONY: setup-ui-tests
 setup-ui-tests:
-	docker-compose exec web make setup-ui-tests
+	docker-compose exec web --user olympia make setup-ui-tests
 
 .PHONY: djshell
 djshell:
