--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "uglify-js": "3.6.0",
     "underscore": "1.9.1"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "optionalDependencies": {
+    "addons-customs-scanner": "/code/private/addons-customs-scanner-v1.0.0.tgz"
+  }
 }
