Add task to run wat

--- a/docker-compose.private.yml
+++ b/docker-compose.private.yml
@@ -4,3 +4,7 @@ services:
   customs:
     build:
       context: ./private/addons-customs-scanner
+
+  wat:
+    build:
+      context: ./private/addons-wat
