--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ markers =
     es_tests: mark a test as an elasticsearch test.
     needs_locales_compilation: mark a test as needing compiled locales to work.
     allow_external_http_requests: mark a test to allow external http requests and disable responses.
-    celery_worker_test: mark a test to require a running celery worker
+    celery_worker_tests: mark a test to require a running celery worker
 norecursedirs =
     node_modules locale static media site-static user-media tmp
     templates fixtures migrations
