--- a/tox.ini
+++ b/tox.ini
@@ -17,34 +17,34 @@ whitelist_externals =
 [testenv:es-and-celery]
 commands =
     make install_python_test_dependencies
-    pytest -m "es_tests or celery_worker_test and not needs_locales_compilation and not static_assets" --ignore=tests/ui/ -v src/olympia/ {posargs}
+    pytest -m "es_tests or celery_worker_tests and not needs_locales_compilation and not static_assets" --ignore=tests/ui/ -v src/olympia/ {posargs}
 
 [testenv:addons-versions-files-ratings]
 commands =
     make install_python_test_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/addons/ src/olympia/versions/ src/olympia/files/  src/olympia/ratings/ {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_tests' -v src/olympia/addons/ src/olympia/versions/ src/olympia/files/  src/olympia/ratings/ {posargs}
 
 [testenv:devhub]
 commands =
     make install_python_test_dependencies install_node_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/devhub/ {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_tests' -v src/olympia/devhub/ {posargs}
 
 [testenv:reviewers-and-zadmin]
 commands =
     make install_python_test_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/reviewers/ src/olympia/zadmin/ {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_tests' -v src/olympia/reviewers/ src/olympia/zadmin/ {posargs}
 
 [testenv:amo-lib-locales-and-signing]
 commands =
     make install_python_test_dependencies install_node_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/amo/ src/olympia/lib/ src/olympia/signing {posargs}
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_tests' -v src/olympia/amo/ src/olympia/lib/ src/olympia/signing {posargs}
     bash {toxinidir}/locale/compile-mo.sh {toxinidir}/locale/
     pytest -n 2 -m 'needs_locales_compilation' -v src/olympia/ {posargs}
 
 [testenv:main]
 commands =
     make install_python_test_dependencies install_node_dependencies
-    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_test' -v src/olympia/ \
+    pytest -n 2 -m 'not es_tests and not needs_locales_compilation and not static_assets and not celery_worker_tests' -v src/olympia/ \
         --ignore src/olympia/addons/ \
         --ignore src/olympia/devhub/ \
         --ignore src/olympia/files/ \
