--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ tmp/*
 # private projects
 addons-yara
 private/
+
+# do not ignore the following files
+!docker-compose.private.yml
+!private/README.md
