--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ tmp/*
 
 # private projects
 addons-yara
+private/
+
+# do not ignore the following files
+!docker-compose.private.yml
+!private/README.md
