--- a/docker-compose.private.yml
+++ b/docker-compose.private.yml
@@ -1,6 +1,11 @@
 version: "2.3"
 
 services:
+  web:
+    depends_on:
+      - customs
+      - wat
+
   customs:
     build:
       context: ./private/addons-customs-scanner
