--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -16,12 +16,13 @@ exemptLabels:
   - "contrib: good first bug"
   - "contrib: welcome"
   - "component: security"
+  - "type: papercut"
 
 # Set to true to ignore issues in a project (defaults to false)
 exemptProjects: true
 
 # Set to true to ignore issues in a milestone (defaults to false)
-exemptMilestones: true
+exemptMilestones: false
 
 # Set to true to ignore issues with an assignee (defaults to false)
 exemptAssignees: false
