Remove type: papercut, add neverstale

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -16,7 +16,7 @@ exemptLabels:
   - "contrib: good first bug"
   - "contrib: welcome"
   - "component: security"
-  - "type: papercut"
+  - "neverstale"
 
 # Set to true to ignore issues in a project (defaults to false)
 exemptProjects: true
