--- a/tests/ui/docker-compose.selenium.yml
+++ b/tests/ui/docker-compose.selenium.yml
@@ -17,7 +17,7 @@ x-env-mapping: &env
     - UITEST_FXA_PASSWORD=uitester
     - MOZ_HEADLESS
     - PYTEST_ADDOPTS=${PYTEST_ADDOPTS}
-    - CI=${CI}
+    - CIRCLECI=${CIRCLECI}
 
 services:
   selenium-firefox:
