--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,5 +183,4 @@ workflows:
               only: /.*/
             branches:
               ignore: /.*/
-      # Disabled because those tests are being moved to a different place
-      # - integration_test
+      - integration_test
