--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -18,11 +18,21 @@ enable-threads  = true
 # Run watchmedo (via watchdog) to implement unrestricted
 # autoreload capability.
 fs-reload = %(base)/docker/artifacts/
+
 # CIRCLECI is only being set on circleci. See addons-server issue #12064
+# First copy the environment value
+if-env = CIRCLECI
+running-circleci = %(_)
+endif =
 if-not-env = CIRCLECI
+running-circleci = none
+endif =
+
+if-not-opt = running-circleci=true
 safe-pidfile = %(base)/docker/artifacts/addons-server-uwsgi-master.pid
 attach-daemon = setsid watchmedo shell-command --patterns="*.py" --recursive --command='/usr/bin/touch %(safe-pidfile)' %(base)
 endif =
+
 max-requests = 5000
 
 # Load apps in workers and not only in master
