Add docs, move back the variable definition to docker-compose.yml

--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -20,14 +20,19 @@ enable-threads  = true
 fs-reload = %(base)/docker/artifacts/
 
 # CIRCLECI is only being set on circleci. See addons-server issue #12064
+
 # First copy the environment value
 if-env = CIRCLECI
 running-circleci = %(_)
 endif =
+
+# But default to it being set to `none`
 if-not-env = CIRCLECI
 running-circleci = none
 endif =
 
+# If the value is actually set to `true` (which it is in CircleCI)
+# then don't run the autoreload
 if-not-opt = running-circleci=true
 safe-pidfile = %(base)/docker/artifacts/addons-server-uwsgi-master.pid
 attach-daemon = setsid watchmedo shell-command --patterns="*.py" --recursive --command='/usr/bin/touch %(safe-pidfile)' %(base)
