--- a/docker/uwsgi.ini
+++ b/docker/uwsgi.ini
@@ -18,7 +18,8 @@ enable-threads  = true
 # Run watchmedo (via watchdog) to implement unrestricted
 # autoreload capability.
 fs-reload = %(base)/docker/artifacts/
-# CIRCLECI is only being set on circleci. See addons-server issue #12064
+# `CIRCLECI` is empty by default and only set to `true` by CircleCI.
+# See addons-server issue #12064
 if-not-env = CIRCLECI
 safe-pidfile = %(base)/docker/artifacts/addons-server-uwsgi-master.pid
 attach-daemon = setsid watchmedo shell-command --patterns="*.py" --recursive --command='/usr/bin/touch %(safe-pidfile)' %(base)
