--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ x-env-mapping: &env
     - TERM=xterm-256color
     - UITEST_FXA_EMAIL
     - UITEST_FXA_PASSWORD=uitester
-    - CI=${CI}
+    - CIRCLECI=${CIRCLECI}
 
 services:
   worker: &worker
