--- a/Makefile-docker
+++ b/Makefile-docker
@@ -65,10 +65,9 @@ help_redirect:
 initialize_db: ## create a new database
 	rm -rf ./user-media/* ./tmp/*
 	$(PYTHON_COMMAND) manage.py create_db --force
-	$(PYTHON_COMMAND) manage.py migrate --noinput --run-syncdb
+	$(PYTHON_COMMAND) manage.py migrate --noinput
 	$(PYTHON_COMMAND) manage.py loaddata initial.json
 	$(PYTHON_COMMAND) manage.py import_prod_versions
-	./schematic --fake src/olympia/migrations/
 	$(PYTHON_COMMAND) manage.py createsuperuser
 	$(PYTHON_COMMAND) manage.py loaddata zadmin/users
 
@@ -129,7 +128,7 @@ update_deps: cleanup_python_build_dir install_python_dev_dependencies install_no
 
 .PHONY: update_db
 update_db: ## run the database migrations
-	./schematic src/olympia/migrations
+	$(PYTHON_COMMAND) manage.py migrate --noinput
 
 .PHONY: update_assets
 update_assets:
@@ -150,8 +149,7 @@ setup-ui-tests:
 	rm -rf ./user-media/* ./tmp/*
 	# Reset the database and fake database migrations
 	$(PYTHON_COMMAND) manage.py create_db --force
-	$(PYTHON_COMMAND) manage.py migrate --noinput --run-syncdb
-	./schematic --fake src/olympia/migrations/
+	$(PYTHON_COMMAND) manage.py migrate --noinput
 
 	# Reindex
 	$(PYTHON_COMMAND) manage.py reindex --force --noinput --wipe
