ignore migrations for codestyle + disable for pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-addopts = -vs --reuse-db --showlocals --tb=short
+addopts = -vs --nomigrations --reuse-db --showlocals --tb=short
 python_files=test*.py
 markers =
     es_tests: mark a test as an elasticsearch test.
@@ -34,7 +34,8 @@ exclude =
     logs,
     site-static,
     static,
-    .git
+    .git,
+    */migrations/*.py
 
 [isort]
 atomic=true
