--- a/docker-compose.private.yml
+++ b/docker-compose.private.yml
@@ -1,7 +1,7 @@
 version: "2.3"
 
 services:
-  web:
+  worker:
     depends_on:
       - customs
       - wat
@@ -14,6 +14,8 @@ services:
       - PORT=10101
     links:
       - "nginx:olympia.test"
+    depends_on:
+      - web
 
   wat:
     build:
@@ -23,3 +25,5 @@ services:
       - PORT=10102
     links:
       - "nginx:olympia.test"
+    depends_on:
+      - web
