--- a/docker-compose.private.yml
+++ b/docker-compose.private.yml
@@ -1,7 +1,7 @@
 version: "2.3"
 
 services:
-  web:
+  worker:
     depends_on:
       - customs
       - wat
@@ -9,7 +9,21 @@ services:
   customs:
     build:
       context: ./private/addons-customs-scanner
+    environment:
+      - ALLOWED_ORIGIN=http://olympia.test
+      - PORT=10101
+    links:
+      - "nginx:olympia.test"
+    depends_on:
+      - web
 
   wat:
     build:
       context: ./private/addons-wat
+    environment:
+      - ALLOWED_ORIGIN=http://olympia.test
+      - PORT=10102
+    links:
+      - "nginx:olympia.test"
+    depends_on:
+      - web
