--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ commands:
       image_tag:
         type: string
         default: "latest"
+      additional:
+        type: string
+        default: ""
     steps:
       - run: >
           printf '{"commit":"%s","version":"%s","source":"https://github.com/%s/%s","build":"%s"}\n'
@@ -23,7 +26,7 @@ commands:
           name: Build docker image and push to repo
           command: |
             docker version
-            docker build -t app:build -f << parameters.dockerfile >> .
+            docker build -t app:build -f << parameters.dockerfile >> << parameters.additional >> .
             docker tag app:build "${DOCKERHUB_REPO}":<< parameters.image_tag >>
             docker login -u "${DOCKERHUB_USER}" -p "${DOCKERHUB_PASS}"
             docker push "${DOCKERHUB_REPO}":<< parameters.image_tag >>
@@ -53,6 +56,7 @@ jobs:
       - build_and_push_container_image:
           image_tag: latest-local-dev
           dockerfile: "Dockerfile"
+          additional: "--build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g)"
 
 workflows:
   version: 2
