--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ x-env-mapping: &env
 services:
   worker: &worker
     <<: *env
-    image: addons/addons-server:fixed-docker-perms
+    image: addons/addons-server:latest
     command: supervisord -n -c /code/docker/supervisor-celery.conf
     user: olympia
     volumes:
