Add E230 to ignore

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,13 @@ filterwarnings =
     ignore::ResourceWarning
 
 [flake8]
-ignore = F999,F405,W504
+ignore =
+    F999,
+    F405,
+    W504,
+    # See https://github.com/PyCQA/pycodestyle/issues/373
+    E203,
+
 exclude =
     src/olympia/wsgi.py,
     docs,
