Switch line length to 88

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ filterwarnings =
     ignore::ResourceWarning
 
 [flake8]
+max-line-length = 88
 ignore =
     F999,
     F405,
@@ -54,5 +55,5 @@ default_section = THIRDPARTY
 include_trailing_comma = false
 known_django = django
 known_olympia = olympia
-line_length = 79
+line_length = 88
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,OLYMPIA,FIRSTPARTY,LOCALFOLDER
