Update ignore values, acording to psf/black#429

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,12 +23,19 @@ filterwarnings =
 
 [flake8]
 max-line-length = 88
+# There may be more ignore values needed, see
+# https://github.com/psf/black/issues/429#issuecomment-472687803 (comment).
+# for more details.
 ignore =
     F999,
     F405,
     W504,
+    # https://github.com/psf/black#line-breaks--binary-operators
+    W503,
     # See https://github.com/PyCQA/pycodestyle/issues/373
+    # and https://github.com/psf/black#slices
     E203,
+    E231,
 
 exclude =
     src/olympia/wsgi.py,
