--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-# New PRS will be automatically distributed by Pull Panda via this proxy team.
+# New PRS will be automatically distributed via this team.
 *     @mozilla/addons-engineering
