Remove code for ui tests

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ whitelist_externals =
 [testenv:es]
 commands =
     make install_python_test_dependencies
-    pytest -m "es_tests and not needs_locales_compilation and not static_assets" --ignore=tests/ui/ -v src/olympia/ {posargs}
+    pytest -m "es_tests and not needs_locales_compilation and not static_assets" -v src/olympia/ {posargs}
 
 [testenv:addons-versions-files-ratings]
 commands =
@@ -57,16 +57,11 @@ commands =
         --ignore src/olympia/zadmin \
         {posargs}
 
-[testenv:ui-tests]
-commands =
-    make -f Makefile-docker update_deps
-    pip install --no-deps -r requirements/uitests.txt
-    pytest --driver Firefox tests/ui/ {posargs}
 
 [testenv:assets]
 commands =
     make update_deps
-    pytest -m "static_assets" --ignore=tests/ui/ -v src/olympia/ {posargs}
+    pytest -m "static_assets" -v src/olympia/ {posargs}
 
 [testenv:codestyle]
 recreate = True
